@@ -1,7 +1,38 @@
-## Introdução
+LetterboxdMusic - Plataforma de Avaliação e Criação de Playlists Musicais
 
-Seja bem vindo!
-Se você curtiu a extensão, não esqueça de deixar uma avaliação!
+O LetterboxdMusic é um projeto JavaFX desenvolvido como parte da matéria de Banco de Dados, o projeto permite que os usuários explorem, avaliem e criem playlists personalizadas sempre interagindo com outros usuários.
 
-Siga o canal no YouTube:
-- Academia dos Devs
+## Recursos
+![Tela de Usuario](C:\Users\pedro\OneDrive\Documentos\projetos\letterboxd\letterboxd-music\src\gui\images\usuario.png)
+
+- **Avaliações Musicais:** Os usuários podem escrever avaliações sobre suas músicas favoritas.
+![Tela de Review](C:\Users\pedro\OneDrive\Documentos\projetos\letterboxd\letterboxd-music\src\gui\images\reviews.png)
+
+- **Playlists Personalizadas:** Crie playlists com suas músicas favoritas.
+![Tela de Playlist](C:\Users\pedro\OneDrive\Documentos\projetos\letterboxd\letterboxd-music\src\gui\images\playlists.png)
+
+
+- **Exploração Musical:** Descubra novas músicas e artistas explorando as playlists criadas por outros usuários.
+
+## Requisitos
+
+Certifique-se de ter os seguintes requisitos instalados antes de executar o projeto:
+
+- Java Development Kit (JDK) 8 ou superior
+- MySQL (ou outro banco de dados compatível)
+- MySQL Connector
+- JavaFX 
+
+-Tool Kit para utilização da aplicação:
+https://drive.google.com/drive/folders/1LaqNhfCGSgDWNzlJG6UI5H8YOmN_me36?usp=sharing
+
+## Configuração
+
+1. Clone este repositório para a sua máquina local:
+
+   git clone https://github.com/kropsz/letterboxd-music.git
+
+2. VARIÁVEIS DE AMBIENTE A CONFIGURAR:
+    PATH_TO_FX (caminho da lib JavaFx)
+
+    CMD RUN COMMAND: java --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml
